# mphotopicker

./: README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: filter.rs  lib.rs  main.rs
